syntax = "proto3";
package beco;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
    optional string string_name = 123456789;
}

service Beco {
    rpc ListUser(ListUserRequest) returns (ListUserResponse);
    rpc AddUser(AddUserRequest) returns (GetUserResponse);
    // rpc AddLinkedUser(ModifyLinkedUserRequest) returns (GetUserResponse);
    // rpc RemoveLinkedUser(ModifyLinkedUserRequest) returns (GetUserResponse);
    rpc UpdateFirstName(ModifyNameRequest) returns (GetUserResponse);
    rpc UpdateOtherNames(ModifyOtherNamesRequest) returns (GetUserResponse);
    rpc UpdateLastName(ModifyNameRequest) returns (GetUserResponse);

    rpc AddAccount(AddAccountRequest) returns (GetUserResponse);
}

enum Blockchain {
    UNSPECIFIED = 0;
    XRPL = 1 [
        (string_name) = "XRPL"
    ];
    EVM = 2 [
        (string_name) = "EVM"
    ];
}

message AddAccountRequest {
    string user_id = 1;
    string calling_user = 2;
    Blockchain blockchain = 3;
    string alias = 4;
}

message ListAccountResponse {
    repeated WalletResponse wallets = 1;
    Blockchain blockchain = 2;
}

message ChainResponse {
    Blockchain chain = 1;
    repeated WalletResponse keys = 2;
}

message WalletResponse {
    string alias = 1;
    string address = 2;
}

message AddUserRequest {
    string calling_user = 2;
    string name = 3;
}

message GetUserResponse {
    string id = 1;
    optional string first_name = 2;
    repeated string other_names = 3;
    optional string last_name = 4;
    repeated ChainResponse chain_accounts = 5;
}

message ListUserRequest {
    string user_id = 1;
    string calling_user = 2;
}

message ListUserResponse {
    repeated GetUserResponse users = 1;
}

message ModifyLinkedUserRequest {
    string user_id = 1;
    string calling_user = 2;
}

message ModifyNameRequest {
    string user_id = 1;
    string calling_user = 2;
    string name = 3;
}

message ModifyOtherNamesRequest {
    string user_id = 1;
    string calling_user = 2;
    repeated string other_names = 3;
}